--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.4.2" // Gerekli Gradle sürümünü belirtin
+        classpath 'com.google.gms:google-services:4.3.15' // Firebase Google Services plugin'i buraya ekleyin
+    }
+}
+
 allprojects {
     repositories {
         google()
