--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,23 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // Diğer bağımlılıklarınız varsa ekleyin
+        classpath 'com.android.tools.build:gradle:7.4.2' // Sürümü ihtiyaca göre güncelleyin
+        classpath 'com.google.gms:google-services:4.3.10' // Firebase için gerekli eklenti
+    }
+}
+
+plugins {
+    // Add the dependency for the Google services Gradle plugin
+    id("com.google.gms.google-services") version "4.3.15" apply false
+}
+
+
+
+// Mevcut kodunuz aşağıdaki gibi kalabilir
 allprojects {
     repositories {
         google()
