--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  intl: ^0.18.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,6 +43,8 @@ dependencies:
   firebase_auth: ^5.3.1
   google_sign_in: ^6.2.1
   toggle_switch: ^2.3.0
+  google_fonts: ^6.2.1
+  multi_dropdown: ^3.0.1
 
 dev_dependencies:
   flutter_test:
