--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,11 @@ dependencies:
   google_fonts: ^6.2.1
   multi_dropdown: ^3.0.1
   syncfusion_flutter_charts: ^27.1.57
+  flutter_calendar_carousel: ^2.4.3
+  calendar_timeline: ^1.1.2
+  http: ^1.2.2
+  shared_preferences: ^2.3.3
+  sign_in_with_apple: ^6.1.3
 
 dev_dependencies:
   flutter_test:
@@ -70,9 +75,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
