--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,6 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+MY_KEYSTORE_PASSWORD=solace_XH327
+MY_KEY_ALIAS=keyAlias
+MY_KEY_PASSWORD=solace_XH327
