--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   http: ^1.2.2
   shared_preferences: ^2.3.3
   sign_in_with_apple: ^6.1.3
+  rename_app: ^1.6.1
 
 dev_dependencies:
   flutter_test:
