--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ^3.5.3
@@ -52,6 +52,7 @@ dependencies:
   shared_preferences: ^2.3.3
   sign_in_with_apple: ^6.1.3
   rename_app: ^1.6.1
+  mailer: ^6.3.0
 
 dev_dependencies:
   flutter_test:
